; ModuleID = '/home/carl/AnghaBench/freebsd/sys/crypto/ccp/extr_ccp.c_ccp_queue_abort.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/crypto/ccp/extr_ccp.c_ccp_queue_abort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ccp_queue = type { i32, i32, i32, i32*, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@MA_OWNED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ccp_queue_abort(%struct.ccp_queue* %0) #0 {
  %2 = alloca %struct.ccp_queue*, align 8
  %3 = alloca i32, align 4
  store %struct.ccp_queue* %0, %struct.ccp_queue** %2, align 8
  %4 = load %struct.ccp_queue*, %struct.ccp_queue** %2, align 8
  %5 = getelementptr inbounds %struct.ccp_queue, %struct.ccp_queue* %4, i32 0, i32 2
  %6 = load i32, i32* @MA_OWNED, align 4
  %7 = call i32 @mtx_assert(i32* %5, i32 %6)
  %8 = load %struct.ccp_queue*, %struct.ccp_queue** %2, align 8
  %9 = getelementptr inbounds %struct.ccp_queue, %struct.ccp_queue* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  store i32 %10, i32* %3, align 4
  br label %11

11:                                               ; preds = %25, %1
  %12 = load i32, i32* %3, align 4
  %13 = load %struct.ccp_queue*, %struct.ccp_queue** %2, align 8
  %14 = getelementptr inbounds %struct.ccp_queue, %struct.ccp_queue* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = icmp ne i32 %12, %15
  br i1 %16, label %17, label %35

17:                                               ; preds = %11
  %18 = load %struct.ccp_queue*, %struct.ccp_queue** %2, align 8
  %19 = getelementptr inbounds %struct.ccp_queue, %struct.ccp_queue* %18, i32 0, i32 3
  %20 = load i32*, i32** %19, align 8
  %21 = load i32, i32* %3, align 4
  %22 = zext i32 %21 to i64
  %23 = getelementptr inbounds i32, i32* %20, i64 %22
  %24 = call i32 @memset(i32* %23, i32 0, i32 4)
  br label %25

25:                                               ; preds = %17
  %26 = load i32, i32* %3, align 4
  %27 = add i32 %26, 1
  %28 = load %struct.ccp_queue*, %struct.ccp_queue** %2, align 8
  %29 = getelementptr inbounds %struct.ccp_queue, %struct.ccp_queue* %28, i32 0, i32 4
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = shl i32 1, %32
  %34 = urem i32 %27, %33
  store i32 %34, i32* %3, align 4
  br label %11

35:                                               ; preds = %11
  %36 = load %struct.ccp_queue*, %struct.ccp_queue** %2, align 8
  %37 = getelementptr inbounds %struct.ccp_queue, %struct.ccp_queue* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 8
  %39 = load %struct.ccp_queue*, %struct.ccp_queue** %2, align 8
  %40 = getelementptr inbounds %struct.ccp_queue, %struct.ccp_queue* %39, i32 0, i32 1
  store i32 %38, i32* %40, align 4
  %41 = load %struct.ccp_queue*, %struct.ccp_queue** %2, align 8
  %42 = getelementptr inbounds %struct.ccp_queue, %struct.ccp_queue* %41, i32 0, i32 2
  %43 = call i32 @mtx_unlock(i32* %42)
  ret void
}

declare dso_local i32 @mtx_assert(i32*, i32) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @mtx_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
